--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,11 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.10"
+attrs = "^23.2.0"
+cattrs = "^23.2.3"
+tomli = "^2.0.1"
+tomli-w = "^1.0.0"
+numpy = "^1.26.4"
 
 [tool.poetry.group.dev.dependencies]
 mypy = "^1.10.0"
