--- a/pyproject.toml
+++ b/pyproject.toml
@@ -69,7 +69,7 @@ target-version = "py310"
 
 [tool.ruff.lint]
 select = ["F", "E", "W", "C90", "I", "N", "D"]
-ignore = ["D203", "D213"]
+ignore = ["D203", "D213", "C901"]
 fixable = ["ALL"]
 unfixable = []
 dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
