--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,10 @@
 [tool.poetry]
-name = "pythondevelopment2024-sudoku"
+name = "sudoku"
 version = "0.0.0"
 description = ""
 authors = [
-    "SegFaulti4 makar.popov01@mail.ru",
-    "Winking-maniac gkgim@yandex.ru",
+    #"SegFaulti4 makar.popov01@mail.ru",
+    #"Winking-maniac gkgim@yandex.ru",
 ]
 readme = "README.md"
 
@@ -13,6 +13,7 @@ python = "^3.10"
 attrs = "^23.2.0"
 cattrs = "^23.2.3"
 numpy = "^1.26.4"
+asciimatics = "^1.15.0"
 
 [tool.poetry.group.dev.dependencies]
 mypy = "^1.10.0"
@@ -31,6 +32,7 @@ follow_imports = "normal"
 check_untyped_defs = true
 allow_redefinition = true
 disallow_untyped_defs = true
+ignore_missing_imports = true
 
 [tool.ruff]
 exclude = [
