--- a/pyproject.toml
+++ b/pyproject.toml
@@ -66,6 +66,7 @@ indent-width = 4
 target-version = "py310"
 
 [tool.ruff.lint]
+preview = true
 select = ["F", "E", "W", "C90", "I", "N", "D"]
 ignore = ["D203", "D213", "C901"]
 fixable = ["ALL"]
