--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ pytest = "^8.2.0"
 
 [tool.poetry.group.docs.dependencies]
 sphinx = "^7.3.7"
+sphinx-autodoc-typehints = "^2.1.0"
 
 [tool.mypy]
 python_version = "3.10"
