--- a/pyproject.toml
+++ b/pyproject.toml
@@ -80,6 +80,9 @@ fixable = ["ALL"]
 unfixable = []
 dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
 
+[tool.ruff.lint.per-file-ignores]
+"tests/**" = ["D"]
+
 [tool.ruff.format]
 quote-style = "double"
 indent-style = "space"
